syntax = "proto3";
package shattered.protocol;
option java_package = "com.shattered.networking.proto";
option cc_enable_arenas = true;

//+ustruct:BlueprintType
message LoginResponse {
    //+uproperty:EditAnywhere, BlueprintReadWrite
    int32 response_id = 1;
}

//+ue:exclude
message LoginRequest {
    int32 build = 1;
    int32 sub_build = 2;
    int32 hot_patch = 3;
    bool is_discord = 4;
    string userId = 5;
    bytes password = 6;
    int32 request_type = 7;
}

//+ue:exclude
message RequestLogout {
    bool realm = 1;
}

//+ue:exclude
message LogoutWithResponse {
    int32 response_id = 1;
}

//+ue:exclude
message RequestLoadLevel {
    string name = 1;
}

//+ue:exclude
message FriendName {
    string name = 1;
}

//+ustruct:BlueprintType
message FriendIgnore {
    string name = 1;
}

//+ustruct:BlueprintType
message SocialStatus {
    int32 online_status = 1;
    int32 public_status = 2;
}

//+ustruct:BlueprintType
message Friend {
    int32 index = 1;
    string name = 2;
    string location = 3;
    string server = 4;
}

//+ue:exclude
message SendPrivateMessage {
    string to = 1;
    string message = 2;
}

//+ustruct:BlueprintType
message ReceivePrivateMessage {
    string from = 1;
    string message = 2;
    int32 permission_level = 3;
}

//+ustruct:BlueprintType
message FriendsList {
    //+uproperty:BlueprintReadOnly
    repeated Friend entry = 1;
}

//+ue:exclude
message ButtonRequestHandle {
    string widget_name = 1;
    int32 button_id = 2;
    repeated int32 parameters = 3;
}

//+ustruct:BlueprintType
message WidgetParamStr {
    string widget = 1;
    string key = 2;
    string value = 3;
}

//+ustruct:BlueprintType
message WidgetParamInt {
    string widget = 1;
    string key = 2;
    int32 value = 3;
}

//+ustruct:BlueprintType
message WidgetParamBool {
    string widget = 1;
    string key = 2;
    bool value = 3;
}